# its-a-trap

./: .gitignore  README.md  pyproject.toml
srctips/: README.md  run_md_over_data_frames.py
video_picker/: app.py  megadetector_video.py  pipeline.py  utils.py  worker.py
